--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -60,6 +60,11 @@
                 "order": [[ 1, "desc" ], [0, "desc"]],
                 "responsive": true,
                 "scrollX": true,
+                "stateSave": true,
+                "stateDuration": -1,
+                "stateSaveParams": function (settings, data) {
+                    data.search.search = "";
+                },
                 "columns": [
                    { "className": "min col-right", },
                     { "className": "min col-center", },
