--- a/templates/supplies/supply_items/list.html
+++ b/templates/supplies/supply_items/list.html
@@ -48,6 +48,11 @@
                 "order": [[ 1, "asc" ], [ 7, "asc" ]],
                 "responsive": true,
                 "scrollX": true,
+                "stateSave": true,
+                "stateDuration": -1,
+                "stateSaveParams": function (settings, data) {
+                    data.search.search = "";
+                },
                 "columns": [
                     { "className": "min col-right", },
                     {
