--- a/templates/supplies/supply_items/edit.html
+++ b/templates/supplies/supply_items/edit.html
@@ -26,10 +26,10 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>{{ form.supply.label_tag }}</label>
-                                                {{ form.supply.errors }}
-                                                {{ form.supply }}
-                                                <small id="supply_help" class="form-text text-muted">Supply</small>
+                                                <label>{{ form.product.label_tag }}</label>
+                                                {{ form.product.errors }}
+                                                {{ form.product }}
+                                                <small id="product_help" class="form-text text-muted">Product</small>
                                             </div>
                                         </div>
                                     </div>
