--- a/templates/main/_main_sidebar.html
+++ b/templates/main/_main_sidebar.html
@@ -46,6 +46,11 @@
             </a>
         </li>
         <li class="nav-item">
+            <a href="{% url 'product_index' %}" class="nav-link {% if nav.first_level == 'supplies' and nav.second_level == 'products' %}active{% endif %}">
+                <i class="nav-icon fas fa-shopping-cart"></i> Products
+            </a>
+        </li>
+        <li class="nav-item">
             <a href="{% url 'supply_item_index' %}" class="nav-link {% if nav.second_level == 'supply_items' %}active{% endif %}">
                 <i class="nav-icon fas fa-drumstick-bite"></i> Supply items
             </a>
