--- a/templates/supplies/products/new.html
+++ b/templates/supplies/products/new.html
@@ -26,10 +26,18 @@
                                     <div class="row">
                                         <div class="col-md-10">
                                             <div class="form-group">
-                                                <label>{{ form.name.label_tag }}</label>
-                                                {{ form.name.errors }}
-                                                {{ form.name }}
-                                                <small id="name_help" class="form-text text-muted">Name</small>
+                                                <label>{{ form.supply.label_tag }}</label>
+                                                {{ form.supply.errors }}
+                                                {{ form.supply }}
+                                                <small id="supply_help" class="form-text text-muted">Supply</small>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>{{ form.bio_label.label_tag }}</label>
+                                                {{ form.bio_label.errors }}
+                                                {{ form.bio_label }}
+                                                <small id="bio_label_help" class="form-text text-muted">Bio</small>
                                             </div>
                                         </div>
                                     </div>
@@ -37,15 +45,42 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>{{ form.category.label_tag }}</label>
-                                                {{ form.category.errors }}
-                                                {{ form.category }}
-                                                <small id="category_help" class="form-text text-muted">Category</small>
+                                                <label>{{ form.brand.label_tag }}</label>
+                                                {{ form.brand.errors }}
+                                                {{ form.brand }}
+                                                <small id="brand_help" class="form-text text-muted">Brand</small>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label>{{ form.amount.label_tag }}</label>
+                                                {{ form.amount.errors }}
+                                                {{ form.amount }}
+                                                <small id="amount_help" class="form-text text-muted">Amount</small>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label>{{ form.unit.label_tag }}</label>
+                                                {{ form.unit.errors }}
+                                                {{ form.unit }}
+                                                <small id="unit_help" class="form-text text-muted">Unit</small>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label>{{ form.packaging.label_tag }}</label>
+                                                {{ form.packaging.errors }}
+                                                {{ form.packaging }}
+                                                <small id="packaging_help" class="form-text text-muted">Packaging</small>
+                                            </div>
+                                        </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>{{ form.min_count.label_tag }}</label>
