--- a/templates/supplies/supply_items/list.html
+++ b/templates/supplies/supply_items/list.html
@@ -19,11 +19,11 @@
                 <thead>
                     <tr>
                         <th data-data="id" class="min">ID</th>
-                        <th data-data="supply" data-name="supply.name">Name</th>
-                        <th data-data="supply.brand.name">Brand</th>
-                        <th data-data="supply.category.name">Category</th>
-                        <th data-data="supply.amount">Amount</th>
-                        <th data-data="supply.unit.name">Unit</th>
+                        <th data-data="product.supply" data-name="product.supply.name">Name</th>
+                        <th data-data="product.brand.name">Brand</th>
+                        <th data-data="product.supply.category.name">Category</th>
+                        <th data-data="product.amount">Amount</th>
+                        <th data-data="product.unit.name">Unit</th>
                         <th data-data="purchase_date">Purchase</th>
                         <th data-data="best_before_date">Best before</th>
                         <th class="min">&nbsp;</th>
@@ -57,8 +57,8 @@
                     { "className": "min col-right", },
                     {
                         "render": function (data, type, row) {
-                            let output = '<a href="/supplies/supplies/by_id/' + data.id + '/">' + data.name + '</a>';
-                            if(row['supply']['bio_label'] === true) {
+                            let output = '<a href="/supplies/products/by_id/' + data.id + '/">' + data.name + '</a>';
+                            if(row['product']['bio_label'] === true) {
                                 output += ' <i class="fas fa-seedling text-success" title="Bio"></i>';
                             }
                             return output;
