--- a/templates/main/base-datatables.html
+++ b/templates/main/base-datatables.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/buttons/1.6.4/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/plugins/datatables-rowgroup/css/rowGroup.bootstrap4.min.css' %}">
 
 {% endblock %}
 
@@ -18,4 +19,6 @@
     <script src="{% static 'admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
     <script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
+    <script src="{% static 'admin-lte/plugins/datatables-rowgroup/js/dataTables.rowGroup.min.js' %}"></script>
+    <script src="{% static 'admin-lte/plugins/datatables-rowgroup/js/rowGroup.bootstrap4.min.js' %}"></script>
 {% endblock %}
