--- a/templates/supplies/products/list.html
+++ b/templates/supplies/products/list.html
@@ -20,6 +20,7 @@
                     <tr>
                         <th data-data="id" class="min">ID</th>
                         <th data-data="supply.name">Supply</th>
+                        <th data-data="name">Name</th>
                         <th data-data="bio_label">Bio</th>
                         <th data-data="brand.name">Brand</th>
                         <th data-data="supply.category.name">Category</th>
@@ -67,6 +68,9 @@
                             return output;
                         }
                    },
+                    {
+                        "defaultContent": '-'
+                    },
                     {
                         "visible": false,
                     },
