--- a/templates/supplies/supply_items/list.html
+++ b/templates/supplies/supply_items/list.html
@@ -19,7 +19,8 @@
                 <thead>
                     <tr>
                         <th data-data="id" class="min">ID</th>
-                        <th data-data="product.supply" data-name="product.supply.name">Name</th>
+                        <th data-data="product.supply" data-name="product.supply.name">Supply</th>
+                        <th data-data="product.name">Name</th>
                         <th data-data="product.brand.name">Brand</th>
                         <th data-data="product.supply.category.name">Category</th>
                         <th data-data="product.amount">Amount</th>
@@ -68,6 +69,9 @@
                             }
                             return output;
                         },
+                    },
+                    {
+                        "defaultContent": '-'
                     },
                     {
                         "defaultContent": '-'
