set autofocus in login form

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -49,7 +49,7 @@
                                                     <p class="login-box-msg" style="color: red;">{{ message }}</p>
                                                 {% endif %}
                                                 <div class="form-group has-feedback">
-                                                    <input name="username" class="form-control" placeholder="{% trans 'Username' %}">
+                                                    <input autofocus="autofocus" name="username" class="form-control" placeholder="{% trans 'Username' %}">
                                                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                                                 </div>
                                                 <div class="form-group has-feedback">
