--- a/templates/supplies/products/list.html
+++ b/templates/supplies/products/list.html
@@ -23,6 +23,7 @@
                         <th data-data="name">Name</th>
                         <th data-data="bio_label">Bio</th>
                         <th data-data="brand.name">Brand</th>
+                        <th data-data="ean">EAN</th>
                         <th data-data="supply.category.name">Category</th>
                         <th data-data="packaging.name">Packaging</th>
                         <th data-data="amount">Amount</th>
@@ -73,6 +74,9 @@
                     },
                     {
                         "visible": false,
+                    },
+                    {
+                        "defaultContent": '-'
                     },
                     {
                         "defaultContent": '-'
