--- a/templates/supplies/products/new.html
+++ b/templates/supplies/products/new.html
@@ -62,6 +62,14 @@
                                                 <small id="brand_help" class="form-text text-muted">Brand</small>
                                             </div>
                                         </div>
+                                        <div class="col-md-3">
+                                            <div class="form-group">
+                                                <label>{{ form.ean.label_tag }}</label>
+                                                {{ form.ean.errors }}
+                                                {{ form.ean }}
+                                                <small id="ean_help" class="form-text text-muted">EAN-Barcode</small>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="row">
