use de locale for date format in Datatables (TODO: needs i18n)

--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -67,7 +67,14 @@
                 },
                 "columns": [
                    { "className": "min col-right", },
-                    { "className": "min col-center", },
+                    {
+                        "className": "min col-center",
+                        "render": function (data) {
+                            if(data) {
+                                return moment(data).locale('de').format('L');
+                            }
+                        }
+                    },
                     {% if request.user.is_staff %}
                         { "className": "min" },
                     {% endif %}
