--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -44,6 +44,7 @@
         <script src="{% static 'admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
         <script src="{% static 'admin-lte/dist/js/adminlte.min.js' %}"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+        <script src="{% static 'admin-lte/plugins/moment/moment-with-locales.min.js' %}"></script>
 
         {{ form.media.js }}
 
