--- a/templates/supplies/supply_items/list.html
+++ b/templates/supplies/supply_items/list.html
@@ -83,11 +83,21 @@
                     { "className": "min", },
                     {
                         "className": "min col-center",
-                        "defaultContent": '-'
+                        "defaultContent": '-',
+                        "render": function (data) {
+                            if(data) {
+                                return moment(data).locale('de').format('L');
+                            }
+                        }
                     },
                     {
                         "className": "min col-center",
-                        "defaultContent": '-'
+                        "defaultContent": '-',
+                        "render": function (data) {
+                            if(data) {
+                                return moment(data).locale('de').format('L');
+                            }
+                        }
                     },
                     {
                         "orderable": false,
